# ctracer

./: .main.c.swp  CMakeLists.txt  Makefile  __main.cu  hitable_list.c  image.h  main  main.c  main.exp  main.lib  random.h  ray.c  ray.h  sphere.h  vec3.c  vec3.h
src/: aabb.c  aabb.h  bvh.c  bvh.h  camera.c  camera.h  common.c  common.h  hitable.h  hitable_list.c  hitable_list.h  image.h  main.c  material.c  material.h  ray.c  ray.h  sphere.c  sphere.h  stb.h  triangle.c  triangle.h  vec3.c  vec3.h
